examples/errors/all2.dvx
-.. Ejemplo de un programa sintactica y semanticamente correcto ..-

box items{
  float gastos;
  float balance;
  int mes;
}

box cajaChica{
  items array[12] movimientos;
  float array[10] bajas;
  int year;

  variant:
  int encargado;
  {
    int noComision;
    char tipo;
  } 
  int array[3] encargados;
}

int main(){

  cajaChica cajaC;
  float monto=0.0,total=0.0;

  for i in 0..11{
     cajaC.movimientos[i].balance= monto;
     monto= monto*5.0 + 60.0;
     total = total + monto; 
     write "El total es:", total, "(hasta el mes ", 
                cajaC.movimientos[i].mes, ")"; 
     if(monto<0.0){ write "Saldo Negativo!!";};
  }

  float minMes= minArray(cajaC.bajas,12);

  
  return 1;

}


-. Funcion para obtener el minimo de un arreglo
float minArray($float array[] arreglo, int long){

float min= arreglo[0];

  for v in 0..long-1 {
    if(arreglo[v]<= min){
       min= arreglo[v];}
  } 

  -. Segunda opcion 

  for valor in arreglo{
    if(valor< min){
       min= valor;
    }
  }
  return min;
}